<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">We care</string>
    <string name="menu">Menu</string>
    <string name="department">Departments</string>
    <string name="employees">Employees</string>
    <string name="profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="admin_panel">Admin panel</string>
    <string name="login">Login</string>
    <string name="poor_rank_text">Poor</string>
    <string name="good_rank_text">Good</string>
    <string name="ni_mbi">Ni Mbi</string>
    <string name="not_bad_rank_text">Not bad</string>
    <string name="average_rank_text">Average</string>
    <string name="iragerageza">Iragerageza</string>
    <string name="nziza">Ni nziza</string>
    <string name="excellent_rank_text">Excellent</string>
    <string name="login_text">Login</string>
    <string name="sign_in_text">Sign In</string>
    <string name="not_available_text">N/A</string>
    <string name="department_name">Guichet</string>

    <string name="vote_for_service_received">RANK SERVICE</string>
    <string name="tanga_amanota_kuri_service">TANGA AMANOTA KURI SERVICE</string>


    <string name="tittle">RANK SERVICE / TANGA AMANOTA KURI SERVICE</string>

    <string name="future_travel_list_header">Rank Global service</string>
    <string name="past_travel_list_header">Rank employees</string>
    <string name="str_department_title">Departments</string>
    <string name="str_employees_title">Employees</string>
    <string name="str_settings">Settings</string>
    <string name="str_about">About this app</string>
    <string name="str_check_update">Check for updates</string>
    <string name="str_search">search</string>
    <string name="search_hint">s</string>
    <string name="str_logout">Logout</string>

    <string name="assigned_number">Assigned number here </string>

    <string name="employee_rank_english_question_title">Do you want to add comment /Hari ibindi ushaka kongeraho ?</string>
    <string name="employee_rank_yes_button">Yes/Yego</string>
    <string name="employee_rank_no_button">No/Oya</string>
</resources>
