<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#003B53"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <!-- Login Text -->

    <RelativeLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="190dip"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/login_icon" />

    </RelativeLayout>


    <!-- Login form -->

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/edittext_top_bg"
            android:hint="@string/str_email"
            android:padding="10dp"
            android:textColorHint="#cccccc"
            android:inputType="textNoSuggestions" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="-2dp"
            android:background="@drawable/edittext_bottom_bg"
            android:hint="@string/str_password"
            android:padding="10dp"
            android:password="true"
            android:textColorHint="#cccccc"
            android:inputType="textNoSuggestions" />

        <Button
            android:id="@+id/bLogin"
            style="@style/ButtonText"
            android:layout_width="378dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="22dp"
            android:background="@drawable/btn_red"
            android:padding="10dp"
            android:text="@string/sign_in_text" />

        <TextView
            android:id="@+id/tvLoginError"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text=" "
            android:textColor="#cccccc"
            android:textSize="17sp" />
    </LinearLayout>

    <!-- copyright fixed aligned to bottom -->

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <TextView
            android:id="@+id/tvFooter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="#cccccc"
            android:textSize="14sp" />
    </RelativeLayout>

</RelativeLayout>